# mini-twitter

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
main/: models.py  views.py
main/migrations/: 0001_initial.py
main/templates/: feed.html  home.html  login.html  post.html  profile.html  signup.html
main/templatetags/: hashtag.py
twitter/: settings.py  urls.py
twitter/main/: forms.py  views.py
twitter/main/migrations/: 0002_auto_20211118_1652.py  0003_delete_tweet.py  0004_profile_tweet.py  0005_tweet_tags.py  0006_auto_20211130_1635.py
twitter/main/static/css/: base.css
twitter/main/templates/: feed.html  home.html  login.html  post.html  profile.html  signup.html
twitter/twitter/: settings.py  urls.py
