[tool.poetry]
name = "twitter"
version = "0.1.0"
description = ""
authors = ["akshat & ellen"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.9"
django-taggit = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
